Fixed width of last room

--- a/src/css/devoxx.less
+++ b/src/css/devoxx.less
@@ -93,6 +93,7 @@ body {
 .last {
   &.room {
     border-right: 1px solid #ddd;
+    box-sizing: border-box;
   }
   .events,.room_name {
     border-right: none;
