--- a/src/partials/directives/event.html
+++ b/src/partials/directives/event.html
@@ -1,2 +1,3 @@
-<div ng-transclude>
+<div ng-class="{ selected: selected }" title="{{event.presentation.summary}}" >
+  {{event.presentation.title || event.note || event.kind}}
 </div>
