--- a/src/partials/directives/event.html
+++ b/src/partials/directives/event.html
@@ -1,3 +1,3 @@
-<div ng-class="{ selected: selected }" title="{{event.presentation.summary || event.talk.summary}}" >
+<div ng-class="{ selected: selected }" title="{{event.presentation.summary || event.summary}}" >
   {{event.name}}
 </div>
