Add twitter boostrap

--- a/src/css/devoxx.less
+++ b/src/css/devoxx.less
@@ -7,7 +7,7 @@ body {
   margin-left: 45px;
   left: 0;
   right: 0;
-  margin-top: 21px;
+  margin-top: 20px;
   position: absolute;
 }
 
@@ -50,7 +50,7 @@ body {
 
 .planning {
   position: relative;
-  margin-top: 30px;
+  margin-top: 40px;
   margin-right: 11px;
   padding-left: 45px;
   white-space: nowrap;
@@ -164,7 +164,7 @@ body {
   left: 0px;
   right: 0px;
   text-align: center;
-  font-size: small;
+  font-size: 11px;
   border-top: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
