Use smaller font for events

--- a/src/css/devoxx.less
+++ b/src/css/devoxx.less
@@ -71,7 +71,7 @@ body {
   background-color: lightgrey;
   right: 5px;
   left: 5px;
-  font-size: small;
+  font-size: x-small;
   padding: 1px 3px;
   box-sizing: border-box;
   white-space: normal;
