--- a/src/css/devoxx.less
+++ b/src/css/devoxx.less
@@ -94,24 +94,46 @@ body {
       margin-bottom: 0px;
     }
   }
-}
 
-.event:hover {
-  background-color: #efefef;
-  height: initial !important;
-  z-index: 100;
-
-  .actions {
-    display: block;
+  &.favorite {
+    background-color: gold;
+    &:hover {
+      background-color: lightyellow;
+      .glyphicon-star {
+        color: gold;
+      }
+    }
   }
-}
 
-.event.selected {
-  background-color: cyan;
-}
+  &.watchLater {
+    background-color: #00CCFF;
+    &:hover {
+      background-color: lightblue;
+      .glyphicon-time {
+        color: blue;
+      }
+    }
+  }
 
-.event.notinterested {
-  opacity: 0.5;
+  &.notinterested {
+    opacity: 0.5;
+    &:hover {
+      opacity: 0.7;
+      .glyphicon-remove {
+        color: red;
+      }
+    }
+  }
+
+  &:hover {
+    background-color: #efefef;
+    height: initial !important;
+    z-index: 100;
+
+    .actions {
+      display: block;
+    }
+  }
 }
 
 .coffeebreak {
