--- a/src/css/devoxx.less
+++ b/src/css/devoxx.less
@@ -1,3 +1,20 @@
+html.sidebar {
+  margin-right: 300px;
+  overflow: hidden;
+}
+
+.rightsidebar {
+  z-index: 200;
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  width: 300px;
+  border-left: 1px solid lightgrey;
+  height: 100%;
+  background-color: #efefef;
+  padding: 4px;
+}
+
 body {
   overflow-x: scroll;
   overflow-y: scroll;
