Make all event area clickable

--- a/src/css/devoxx.less
+++ b/src/css/devoxx.less
@@ -144,8 +144,11 @@ body {
 
   &:hover {
     background-color: #efefef;
-    height: initial !important;
     z-index: 100;
+
+    .content {
+      height: initial !important;
+    }
 
     .actions {
       display: block;
